<resources>
    <string name="app_name">Exact plan</string>
    <string name="action_settings">Settings</string>
    <string name="project_title">Project Title</string>
    <string name="estimated_time">Estimated time: </string>
    <string name="estimated_task_time">Estimated time: </string>
    <string name="real_time">/ Real time: </string>
    <string name="total_task_time">Total time: </string>
    <string name="_00_00">00:00</string>
    <string name="task_title">Task title</string>
    <string name="comment">Comment</string>
    <string name="title_activity_add_task">Task Editor</string>
    <string name="save_project">Save project</string>
    <string name="edit_button">Edit button</string>
    <string name="timer_start_button">Timer start button</string>
    <string name="pomodoro_start_button">Pomodoro start button</string>
    <string name="graph">Accuracy graph</string>
    <string name="title_activity_timer">Timer</string>
    <string name="title_activity_timer_pomodoro">Pomodoro Timer</string>
    <string name="start_or_pause_chronometer_button">start or pause chronometer button</string>
    <string name="back_on_timer_activity_title">Do you want to stop timer?</string>
    <string name="back_on_timer_activity">The task is still in progress. Do you want to stop working on this task?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="in_project">In project</string>
    <string name="title_activity_add_time">Add Time</string>
    <string name="task">Task</string>
    <string name="additional_working_time">Additional working time</string>
    <string name="project">Project</string>
    <string name="delete_project_dialog">Do you really want to delete this project?</string>
    <string name="delete_task_dialog">Do you really want to delete this task?</string>
    <string name="make_project_done_dialog">Do you want to move this project to archive?</string>
    <string name="make_task_done_dialog">Do you want to move this task to archive?</string>
    <string name="delete_button">Delete button</string>
    <string name="make_task_done">Make task done</string>
    <string name="vertical_action_divider">Vertical action divider</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_integration_enable">Enable WHENHUB integration</string>
    <string name="pref_description_integration">WHENHUB lets you share and see your
        productivity charts in a new and creative way
    </string>

    <string name="pref_access_token">Access Token</string>
    <string name="pref_default_token">64 characters from your profile in WHENHUB Studio</string>

    <string name="pref_title_new_message_notifications">Pomodoro notification</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="info">Info</string>
    <string name="title_activity_info">Info</string>

    <string name="large_text">
        "Time management is one of the most important skills for successful people.\n\n"

        "Time is the only resource that can not be borrowed from outside or renewed."
        "To be successful you should plan your time and use it as effective as possible."
        "This app can help you plan your projects and tasks and increase your planning skill.\n\n"

        "Pomodoro technique.\n\n"

        "The Pomodoro Technique is a time management method developed by Francesco Cirillo "
        "in the late 1980s. The technique uses a timer to break down work into intervals, "
        "traditionally 25 minutes in length, separated by short breaks. These intervals are "
        "named pomodoros, the plural in English of the Italian word pomodoro (tomato), after "
        "the tomato-shaped kitchen timer that Cirillo used as a university student."
        "A goal of the technique is to reduce the impact of internal and external interruptions "
        "on focus and flow. \n\n"

        "The stages of planning, tracking, recording, processing and visualizing are fundamental "
        "to the technique. In the planning phase tasks are prioritized by recording them in a "
        "'To Do Today' list. This enables users to estimate the effort tasks require. "
        "As pomodoros are completed, they are recorded, adding to a sense of accomplishment and "
        "providing raw data for subsequent self-observation and improvement.\n\n"

        "Text source: wikipedia.org\n\n"

        "WHENHUB.\n\n"

        "WhenHub lets you transform time-ordered information such as a timeline or schedule "
        "into a beautiful, interactive, embeddable Whencast that entertains, educates, and provides chronological context. \n\n"
        "This app uses whenhub to store work time intervals and planning accuracy rates."
        "So you can view and share your working results in different ways such as social networks or between your own devices.\n\n"
        "Visit <a href="https://www.whenhub.com/">whenhub.com</a> for more information.\n\n"

        "Used icons.\n\n"

        "Some icons used in app was designed by authors from www.flaticon.com.\n"
        "Special thanks to these authors: \n\n"
        "<a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>,\n"
        "<a href="http://www.flaticon.com/authors/simpleicon" title="SimpleIcon">SimpleIcon</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>"
        "<a href="http://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>,\n"
        "<a href="http://www.flaticon.com/authors/madebyoliver" title="Madebyoliver">Madebyoliver</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>.\n\n"
    </string>

    <string name="notification_title">Pomodoro time management</string>
    <string name="notification_text_25">Pomodoro time interval ended</string>
    <string name="notification_text_5">Pomodoro relax time ended. Time to work!</string>
    <string name="_25_00">25:00</string>
    <string name="flow">FLOW</string>
    <string name="relax">RELAX</string>
    <string name="whenhub_access">Whenhub access</string>
    <string name="provide_access_token">To use this feature you should register at Whenhub.com and save access token in settings</string>
    <string name="work_graph">Work graph</string>
    <string name="add_time">Add time</string>
    <string name="add_task">Add task</string>
    <string name="add_project">Add project</string>

    <string name="project_foreign_language">Foreign language mastery</string>
    <string name="project_foreign_language_comment">What to do to make my Spanish better</string>
    <string name="project_blogging">Blogging</string>
    <string name="project_app">My app project</string>
    <string name="task_read_story">Read story in new book</string>
    <string name="task_grammar">Look through grammar</string>
    <string name="task_new_words">Remember new words</string>
    <string name="task_choose_theme">Choose the most popular theme on Quora</string>
    <string name="task_choose_theme_comment">Need to write about interesting themes</string>
    <string name="task_find_5_articles">Find and read 10 articles on the theme</string>
    <string name="task_make_plan">Make a plan for my own article</string>
    <string name="task_wireframes">Draw wireframes</string>
    <string name="task_database">Create database structure</string>
    <string name="task_dbhelper">Write DBHelper class</string>
    <string name="task_write_code">Write code for alarm broadcast receiver</string>
    <string name="task_activity">Create activity for database edition</string>
    <string name="project_editor">Project Editor</string>
    <string name="title_activity_project_view">Project Info</string>
    <string name="context_menu_info">Info</string>
    <string name="time_info_project">Info</string>
    <string name="done_info_project">Done tasks</string>
    <string name="active_info_project">Active tasks</string>
    <string name="average_time_in_working_days">Average time in working days:</string>
    <string name="_0000_00_00_00_00">0000-00-00 00:00</string>
    <string name="project_completed">Project completed:</string>
    <string name="project_started">Project started:</string>
    <string name="working_time">Working time:</string>
    <string name="still_no_tasks">...no tasks in project. You still didn\'t started it...</string>
    <string name="still_no_end_date">...still working...</string>
    <string name="title_activity_info_task">Working time</string>
    <string name="_0000_00_00">0000-00-00</string>
    <string name="minutes">minutes</string>
    <string name="divider_time_value"><![CDATA[>]]></string>
    <string name="delete_time">Do you really want to delete this time interval?</string>
    <string name="title_activity_working_time_chart">Chart</string>
    <string name="local_chart">Local chart</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
