<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.na_uglu.planchecker.MainActivity">
    <item
        android:id="@+id/whenhub_menu_item"
        android:icon="@drawable/ic_graph_line_screen"
        android:orderInCategory="100"
        android:title="@string/graph"
        app:showAsAction="always" />
    <item
        android:id="@+id/info_menu_item"
        android:icon="@drawable/ic_info_white_24dp"
        android:orderInCategory="101"
        android:title="@string/info"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:orderInCategory="102"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
</menu>
