<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_started"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/project_started_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0000_00_00_00_00"
        android:layout_below="@+id/textView15"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/project_started_date"
        android:layout_marginTop="14dp"
        android:text="@string/project_completed" />

    <TextView
        android:id="@+id/project_compleated_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView17"
        android:text="@string/_0000_00_00_00_00" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/project_compleated_date"
        android:layout_marginTop="14dp"
        android:text="@string/working_time" />

    <TextView
        android:id="@+id/project_real_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00"
        android:layout_below="@+id/textView19"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estimated_time"
        android:layout_below="@+id/project_real_time"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp" />

    <TextView
        android:id="@+id/project_estimated_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00"
        android:layout_below="@+id/textView21"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/project_estimated_time"
        android:layout_marginTop="14dp"
        android:text="@string/average_time_in_working_days" />

    <TextView
        android:id="@+id/project_average_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView23"
        android:text="@string/_00_00" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/project_average_time"
        android:layout_marginTop="19dp"
        android:text="@string/comment" />

    <TextView
        android:id="@+id/project_comment_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView20" />

</RelativeLayout>
