<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="32dp"
    android:paddingEnd="8dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:orientation="vertical">
        <TextView
            android:id="@+id/proect_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/project_title"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/project_time_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estimated_time" />

            <TextView
                android:id="@+id/estimated_project_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00_00" />

            <TextView
                android:id="@+id/project_time_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/real_time" />

            <TextView
                android:id="@+id/real_project_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00_00" />
        </LinearLayout>

</LinearLayout>