<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/list_item_padding"
    android:orientation="vertical">

    <TextView
        android:id="@+id/task_title_in_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAppearance="?attr/textAppearanceListItem" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estimated_time"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/task_time_plan_in_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/real_time"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/task_time_real_in_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00"
            android:textAppearance="?attr/textAppearanceListItem" />
    </LinearLayout>

</LinearLayout>
